# vision_opencv

cv_bridge/: CMakeLists.txt  package.xml
cv_bridge/src/: CMakeLists.txt
image_geometry/: CMakeLists.txt  package.xml
opencv_dev/: CMakeLists.txt  package.xml
opencv_dev/cmake/: opencv_dev-extra.cmake.in
opencv_dev/opencv/linux/include/: x264_config.h
opencv_dev/opencv/linux/include/libavutil/: ffversion.h
opencv_dev/opencv/linux/include/opencv4/opencv2/: cvconfig.h  opencv_modules.hpp
opencv_dev/opencv/linux/lib/: libavdevice.so.58.10.100  libavfilter.so.7.85.100  libavformat.so.58.45.100  libavutil.so.56.51.100  libopencv_img_hash.so.4.1.0  libpostproc.so.55.7.100  libswresample.so.3.7.100  libswscale.so.5.7.100  libx264.so.161
opencv_dev/opencv/linux/lib/cmake/opencv4/: OpenCVConfig.cmake  OpenCVModules-release.cmake  OpenCVModules.cmake
opencv_dev/opencv/linux/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc  set.sh  x264.pc
opencv_dev/opencv/linux/share/man/man1/: ffmpeg-all.1  ffprobe-all.1
