<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format2.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="2">
  <name>opencv_dev</name>
  <version>3.0.2</version>
  <description>
   opencv dev.
  </description>
  <maintainer email="chencong@insta360.com">cc</maintainer>
  <license>BSD</license>
  <url>http://wiki.ros.org/opencv_tests</url>
  
  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>